PENDING: 6. Add Projects Menu : Set only Projects Picture and details 9. Should be rendering from Product View page to another Menu.
DONE:

1. Change the Color of Header & Footer.  Others Section Background Color change will best for this
2. Set All Certificates with title
3. Replace or remove previous Image and set only Digital Communication System Images
4. Remove client & Exeibition Menu
5. Add Team Menu : where add Leadership data from pdf with  No Face  images
7. Products will according provide documents and related
8. In Profile Menu showing formation from pdf documents Like as : Annual Revenue , Annual Import , Established Year , No of Employees

--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -2,8 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@500;600;700;800&display=swap');
 
 :root {
-    --bs-primary: #6db395;
-    --bs-secondary: #6ab596;
+    --bs-primary: #2b3553; /*#6db395;*/
+    --bs-secondary:  #31384d; /*#6ab596;*/
     --bs-light: #ecf2f6;
     --bs-dark: #333333;
     /* --bs-text: #454c7e; */
